--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+  <script src="firebase.js"></script>
+  <script src="login.js"></script>
 </head>
 <body>
 <section class="menu cid-ro0q7j30xb" once="menu" id="menu1-0">
