--- a/dashboardPortal.html
+++ b/dashboardPortal.html
@@ -16,12 +16,62 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="index.js"></script>
   
   
   
 </head>
 <body>
+
+    <section class="menu cid-ro0q7j30xb" once="menu" id="menu1-0">
+        <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </button>
+            <div class="menu-logo">
+                <div class="navbar-brand">
+                    <span class="navbar-logo">
+                        <a href="index.html">
+                             <img src="assets/images/logo-128x86.png" alt="Yojana Access" title="" style="height: 3.8rem;">
+                        </a>
+                    </span>
+                    
+                </div>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
+                    <li class="nav-item">
+                        <a class="nav-link link text-white display-4" href="index.html">
+                            <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link text-white display-4" href="loginPortal.html">
+                            <span class="mbri-unlock mbr-iconfont mbr-iconfont-btn"></span>
+                            Login | Dashboard
+                        </a>
+                    </li>
+                </ul>
+                <div class="navbar-buttons mbr-section-btn">
+                    <a class="btn btn-sm btn-primary display-4" href="registerPortal.html">
+                        <span class="mbri-login mbr-iconfont mbr-iconfont-btn"></span>
+                        Register your Home
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </section>
   
+    <button class="btn btn-primary btn-md" style="position:relative;left:35%" onclick="location.href='dashboard.html'">Dashboard</button>
+    <button class="btn btn-primary btn-md" style="position:relative;left:35%" onclick="location.href='submit_review.html'">Submit Review</button>
+
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
