--- a/registerPortal.html
+++ b/registerPortal.html
@@ -92,144 +92,32 @@
     </div>
 
 </section>
-<section class="mbr-section" id="firebase-admin-block-9" style="background-color: rgb(255, 255, 255); padding-top: 2rem; padding-bottom: 9rem;">
-  <div class="container" id="login-form">
-    <center><h2 class="form-signin-heading"><u>Yojana Access Registration Form</u></h2>
-    <form class="form-signin" style="margin-top: 20px">
-      <table>
-        <tr>
-          <td id="dataTable">Village/गाँव:</td>
-          <td id="dataTable">
-            <input type="text" id="villageName" required>
-          </td>
-          <td id="dataTable">Gram Panchayat/ग्राम पंचायत:</td>
-          <td id="dataTable">
-              <input type="text" id="gramName" required>
-          </td>
-        </tr>
-
-        <tr>
-            <td id="dataTable">Ward No./वार्ड नं:</td>
-            <td id="dataTable">
-              <input type="number" id="wardNo" required>
-            </td>
-            <td id="dataTable">Block/खंड:</td>
-            <td id="dataTable">
-                <input type="text" id="blockName" required>
-            </td>
-          </tr>
-
-          <tr>
-              <td id="dataTable">District/जिला:</td>
-              <td id="dataTable">
-                <input type="text" id="districtName" required>
-              </td>
-              <td id="dataTable">State/राज्य:</td>
-              <td id="dataTable">
-                  <input type="text" id="stateName" required>
-              </td>
-            </tr>
-
-            <tr>
-              <td id="dataTable">1. Respondent's Profile/उत्तरदाता की प्रोफ़ाइल:</td>
-            </tr>
-            
-            <tr>
-              <table border="1">
-                <tr>
-                  <td id=dataTable>Name/नाम: <input type="text" id="userName" required></td>
-                  <td id=dataTable>Gender/लिंग:
-                    <select id="userGender">
-                      <optgroup>
-                        <option>Male/पुरुष</option>
-                        <option>Female/महिला</option>
-                        <option>Others/अन्य</option>
-                      </optgroup>
-                    </select>
-                  </td>
-                  <td id=dataTable>Age/आयु (Yrs): <input type="number" id="userAge" required></td>
-                </tr>
-
-                <tr>
-                    <td id=dataTable>Relationship with Head of House/घर के मुखिया के साथ संबंध: <input type="text" id="userRelationHead" required></td>
-                    <td id=dataTable>Contact Number/संपर्क संख्या: <input type="phone" id="userContact" required></td>
-                  </tr>
-              </table>
-            </tr>
-      </table>
-    </form>
-    </center>
-  </div>
-  <div class="container" id="login-panel" style="display: none">
-    <ul class="nav nav-tabs" role="tablist" id="menu-tabs">
-      <li class="nav-item">
-        <a href="#" class="nav-link" onclick="signOut()">Sign Out</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" data-toggle="tab" href="#articles" role="tab">Articles</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" onclick="newArticle()" href="#new-form" role="tab">New Article</a>
-      </li>
-    </ul>
-    <!-- Tab panes -->
-    <div class="tab-content">
-      <div class="tab-pane active" id="articles" role="tabpanel">
-
-        <div class="container">
-          <div class="row">
-
-            <div class="col-sm-12 blog-main">
-              <div class="sidebar-module">
-                <h4>Articles</h4>
-                <ol class="list-unstyled" id="article-list">
-                </ol>
-              </div>
-            </div>
-            <!-- /.blog-sidebar -->
-          </div>
-        </div>
-
-      </div>
-      <div class="tab-pane" id="new-form" role="tabpanel">
-
-                <div class="container">
-                  <div class="row">
-                    <div class="col-sm-12 blog-main" id="new-article-form">
-
-                      <div class="blog-post">
-                        <div id="firebase-authorPic" class="article-photo" style="float: left">
-                          <img id="authorPic" class="img-responsive" src="http://placehold.it/100x100" style="margin-right:20px; border-radius: 50%; height: 100px">
-                        </div>
-                        <h2 id="title" contenteditable="true" data-placeholder="Article title" class="blog-post-title">Article Title</h2>
-                        <p class="blog-post-meta"><small id="firebase-timestamp">January 12, 2014</small>
-                          <span id="author-name">by John</span>
-                        </p>
-
-                        <p class="panel-body" id="intro" contenteditable="true" placeholder="Write some intro...">This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-
-                        <hr>
-                        <div id="body" contenteditable="true">
-                          <p>Just write stuff ...</p>
-
-                        </div><!-- /#body -->
-
-                      </div>
-                      <div style="text-align: right;">
-                        <a href="#" class="btn btn-primary" id="create-article" onclick="save()">Create</a>
-                        <a href="#" class="btn btn-primary" id="save-article" onclick="save()" style="display: none">Save</a>
-                        <a href="#" class="btn btn-secondary" id="save-cancel" onclick="cancel()">Cancel</a>
-                      </div>
-
-                    </div>
-                    <!-- /.blog-main -->
-                  </div>
-                </div>
-      </div>
-    </div>
-
-  </div>
-</section><script data-rv-view="38">
+<div style="background-color: rgba(0,0,0,0.4);height: 500px;width: 800px;overflow-y: scroll;position: relative;left:20%;align-items:center;margin: 20px">
+  <form data-component="loginForm" style="padding: 20px;">
+    <h2 style="text-align: center">Registration Form</h2>
+    <p style="color: red">* required fields</p>
+    <label>Full Name of the applicant: <span style="color: red">*</span></label><br>
+    <input type="text" name="full_name" placeholder="Enter firstName" class="form-control" required><br>
+    <label>Gender: <span style="color: red">*</span></label><br>
+    <input type="radio" name="gender" value="male" checked> Male<br>
+    <input type="radio" name="gender" value="female"> Female<br>
+    <input type="radio" name="gender" value="other"> Other</br></br>
+    <label>Full residential address: <span style="color: red">*</span></label><br>
+    <input type="textarea" name="email" placeholder="Enter full address" class="form-control" required><br>
+    <label>Family details:</label><br>
+    <input type="text" name="guardian_name" placeholder="Enter your Father's/Mother's/Guardian's Name" class="form-control" required><br>
+    <input type="text" name="partner_name" placeholder="Enter your Partner's Name" class="form-control"></br>
+    <label>No. of children</label></br>
+    <input type="number" name="no_of_children" class="form-control"></br>
+    <input type="text" name="child_name" placeholder="Enter your child's Name" class="form-control" ><br>
+    <label>Aadhaar card number: <span style="color: red">*</span></label><br>
+    <input type="text" name="aadhaar_number" placeholder="Aadhaar Number" class="form-control" id="aadhaar_number" required></br>
+    <label>Enter the number registred with your aadhaar:</label>
+    <input type="text" name="phone_number" class="form-control" id="phone_number" required></br>
+    <button class="btn btn-primary btn-md" style="position:relative;left:35%">Register</button>
+  </form>
+</div>
+<script data-rv-view="38">
   document.addEventListener("DOMContentLoaded", function() {
     var recentPostsRef = firebase.database().ref('posts').orderByChild("order").limitToFirst(100);
     fetchAdminPosts(recentPostsRef);
