--- a/index.html
+++ b/index.html
@@ -15,10 +15,22 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-  <script src="firebase.js"></script>
-  <script src="login.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCitRgnQXWRbMaAJHCjtz9fEo2xFoAmk1A",
+      authDomain: "yojana-access.firebaseapp.com",
+      databaseURL: "https://yojana-access.firebaseio.com",
+      projectId: "yojana-access",
+      storageBucket: "yojana-access.appspot.com",
+      messagingSenderId: "161023397386",
+      appId: "1:161023397386:web:003952ab026932ed"
+      };
+    firebase.initializeApp(config);
+  </script>
+  <script src="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.css" />
+  <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
 <section class="menu cid-ro0q7j30xb" once="menu" id="menu1-0">
