--- a/registerPortal.html
+++ b/registerPortal.html
@@ -93,76 +93,30 @@
 
 </section>
 <div style="background-color: rgba(0,0,0,0.4);height: 500px;width: 800px;overflow-y: scroll;position: relative;left:20%;align-items:center;margin: 20px">
-  <form data-component="loginForm" style="padding: 20px;">
+  <form data-component="loginForm" id="registerForm" style="padding: 20px;">
     <h2 style="text-align: center">Registration Form</h2>
     <p style="color: red">* required fields</p>
     <label>Full Name of the applicant: <span style="color: red">*</span></label><br>
-    <input type="text" name="full_name" placeholder="Enter firstName" class="form-control" required><br>
+    <input type="text" id="full_name" placeholder="Enter firstName" class="form-control" required><br>
     <label>Gender: <span style="color: red">*</span></label><br>
-    <input type="radio" name="gender" value="male" checked> Male<br>
-    <input type="radio" name="gender" value="female"> Female<br>
-    <input type="radio" name="gender" value="other"> Other</br></br>
+    <input type="radio" id="gender" value="male" checked> Male<br>
+    <input type="radio" id="gender" value="female"> Female<br>
+    <input type="radio" id="gender" value="other"> Other</br></br>
     <label>Full residential address: <span style="color: red">*</span></label><br>
-    <input type="textarea" name="email" placeholder="Enter full address" class="form-control" required><br>
+    <input type="textarea" id="email" placeholder="Enter full address" class="form-control" required><br>
     <label>Family details:</label><br>
-    <input type="text" name="guardian_name" placeholder="Enter your Father's/Mother's/Guardian's Name" class="form-control" required><br>
-    <input type="text" name="partner_name" placeholder="Enter your Partner's Name" class="form-control"></br>
+    <input type="text" id="guardian_name" placeholder="Enter your Father's/Mother's/Guardian's Name" class="form-control" required><br>
+    <input type="text" id="partner_name" placeholder="Enter your Partner's Name" class="form-control"></br>
     <label>No. of children</label></br>
-    <input type="number" name="no_of_children" class="form-control"></br>
-    <input type="text" name="child_name" placeholder="Enter your child's Name" class="form-control" ><br>
+    <input type="number" id="no_of_children" class="form-control"></br>
+    <input type="text" id="child_name" placeholder="Enter your child's Name" class="form-control" ><br>
     <label>Aadhaar card number: <span style="color: red">*</span></label><br>
-    <input type="text" name="aadhaar_number" placeholder="Aadhaar Number" class="form-control" id="aadhaar_number" required></br>
+    <input type="text" id="aadhaar_number" placeholder="Aadhaar Number" class="form-control" required maxlength="12"></br>
     <label>Enter the number registred with your aadhaar:</label>
-    <input type="text" name="phone_number" class="form-control" id="phone_number" required></br>
-    <button class="btn btn-primary btn-md" style="position:relative;left:35%">Register</button>
+    <input type="text" id="phone_number" class="form-control" required></br>
+    <button class="btn btn-primary btn-md" type="submit" style="position:relative;left:35%">Register</button>
   </form>
 </div>
-<script data-rv-view="38">
-  document.addEventListener("DOMContentLoaded", function() {
-    var recentPostsRef = firebase.database().ref('posts').orderByChild("order").limitToFirst(100);
-    fetchAdminPosts(recentPostsRef);
-
-    firebase.auth().onAuthStateChanged(onAuthStateChanged);
-
-    function onAuthStateChanged(user) {
-
-      if (user) {
-        writeUserData(user.uid, user.displayName, user.email, user.photoURL);
-        document.getElementById('login-form').style.display = 'none';
-        document.getElementById('login-panel').style.display = 'block';
-        cancel();
-      } else {
-        document.getElementById('login-form').style.display = 'block';
-        document.getElementById('login-panel').style.display = 'none';
-
-      }
-    }
-
-    CKEDITOR.inline( 'body',{
-        toolbar: [
-    			{ name: 'document', items: [ 'Source' ] },
-    			{ name: 'basicstyles', items: [ 'Bold', 'Italic' ] },
-    			{ name: 'paragraph', items: [ 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'Blockquote' ] },
-    			{ name: 'links', items: [ 'Link', 'Unlink' ] },
-    			{ name: 'insert', items: [ 'Image' ] },
-    			{ name: 'styles', items: [ 'Format', 'Styles' ] }
-    		]
-    } );
-
-    CKEDITOR.inline( 'intro',{
-        toolbar: [
-    			{ name: 'document', items: [ 'Source' ] },
-    			{ name: 'basicstyles', items: [ 'Bold', 'Italic' ] },
-    			{ name: 'paragraph', items: [ 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'Blockquote' ] },
-    			{ name: 'links', items: [ 'Link', 'Unlink' ] },
-    			{ name: 'insert', items: [ 'Image' ] },
-    			{ name: 'styles', items: [ 'Format', 'Styles' ] }
-    		]
-    } );
-
-  });
-</script>
-
 <section once="footers" class="cid-ro0uIPdlC1" id="footer6-7">
 
     
@@ -180,7 +134,8 @@
     </div>
 </section>
 
-
+<script src="require.js"></script>
+    <script src="index.js"></script>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
